--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             var stripe = Stripe('pk_test_TYooMQauvdEDq54NiTphI7jx');
 
             stripe.redirectToCheckout({
-                sessionId: 'cs_test_b1qoNmZJzb6o7UUWoivZ2YiDbZCMvRJm013cafl65fMXAFp6Y4ZUjj383R'
+                sessionId: "cs_test_b14lLaQAcTbf1maN7uCoopNKBxr0CFt7qnv3CWTYAdEg9Pbph37dqeXZrg"
             });
         </script>
     </body>
